[tool.poetry]
name = "foocat_ejm"
version = "0.1.0"
description = "Python package that eases the pain concatenating Pandas categoricals"
authors = ["moorhou7 <evelyn.moorhouse@mail.utoronto.ca>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
